# rechnerarchitektur

./: .gitignore  CMakeLists.txt  README.md  bubble_sort.c  build.sh  demo.c  demo.h  demo_main.c  demo_postprocess.c  demo_preprocess.c  demo_sort.c  doit.sh  eisvogel-grayscale.data  eisvogel.data  eisvogel.h  eisvogel_grayscale.h  insertion_sort.c  main.c  measurements.csv  perf.sh  postprocess.c  preprocess.c  quick_sort.c  sobel-parallel.c  sobel.c  sorting.c  time.csv  types.h  zdemo.cbp  zdemo.depend  zdemo.layout
abgabe/: CMakeCache.txt  Makefile  bubble_sort.ripes.c  bubble_sort.ripes.c.in  bubble_sort.skeleton.c  bubble_sort.skeleton_mini.c  bubble_sort_O1_mini  bubble_sort_O3_mini  bubble_sort_g_mini  cmake_install.cmake  compile_commands.json  insertion_sort.ripes.c  insertion_sort.ripes.c.in  insertion_sort.skeleton_mini.c  insertion_sort_O1_mini  insertion_sort_O2_mini  insertion_sort_O3_mini  insertion_sort_g_mini  qsort.ripes.c.in  qsort.skeleton_mini.c  qsort_O2_mini  quick_sort.ripes.c  quick_sort.ripes.c.in  quick_sort.skeleton_mini.c  quick_sort_O1_mini  quick_sort_O2_mini  quick_sort_O3_mini  quick_sort_g_mini  sobel-par-debug  sobel-parallel-O1  sobel-parallel-O1.csv  sobel-parallel-O2.csv  sobel-parallel-O3  sobel-parallel-O3.csv  sobel-parallel-g  sobel-parallel-g.csv  sobel-seq-debug  sobel-sequential-O1  sobel-sequential-O1.csv  sobel-sequential-O2  (+5 more)
scripts/: count_instructions.pl
sorting/: CMakeLists.txt  bubble_sort.c  bubble_sort.h  insertion_sort.c  insertion_sort.h  quick_sort.c  quick_sort.h  sorting.c.in
